Update azure pipeline (#18) and fix Element (#127) (#135)
* Update azure pipeline (#18) and fix Element (#127)

* #18 Update pipeline: add version param to pack command

* Test updated pack command (#18)

* #18 Add version param to pack command

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,7 +53,7 @@ steps:
   inputs:
     command: 'pack'
     projects: Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
-    arguments: -c $(buildConfiguration) -o $(Build.ArtifactStagingDirectory) --no-build
+    arguments: -c $(buildConfiguration) -o $(Build.ArtifactStagingDirectory) /p:Version=$(GitVersion.NuGetVersion)
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
 
 - task: NuGetCommand@2
