--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ steps:
 #    arguments: -c $(buildConfiguration) --no-build
 #    publishTestResults: true
 
-- script: dotnet pack $(System.DefaultWorkingDirectory)/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj -c $(buildConfiguration) --no-build -o '$(Build.ArtifactStagingDirectory)'
+- script: dotnet pack $(System.DefaultWorkingDirectory)\Aquality.Selenium\src\Aquality.Selenium\Aquality.Selenium.csproj -c $(buildConfiguration) --no-build -o '$(Build.ArtifactStagingDirectory)'
   displayName: 'Create NuGet package'
 
 #- task: DotNetCoreCLI@2
