--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,12 +25,15 @@ steps:
 #    extraProperties: |
 #      sonar.coverage.exclusions=**/**
 
-- task: DotNetCoreCLI@2
+#- task: DotNetCoreCLI@2
+#  displayName: 'Build solution - $(buildConfiguration)'
+#  inputs:
+#    command: 'build'
+#    projects: Aquality.Selenium/Aquality.Selenium.sln
+#    arguments: -c $(buildConfiguration) /p:Version=$(GitVersion.NuGetVersion)
+
+- script: dotnet build Aquality.Selenium/Aquality.Selenium.sln -c $(buildConfiguration) /p:Version='$(GitVersion.NuGetVersion)'
   displayName: 'Build solution - $(buildConfiguration)'
-  inputs:
-    command: 'build'
-    projects: Aquality.Selenium/Aquality.Selenium.sln
-    arguments: -c $(buildConfiguration) /p:Version=$(GitVersion.NuGetVersion)
 
 #- task: SonarCloudAnalyze@1
 #  displayName: 'Run SonarCloud code analysis'
