--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ steps:
 #    projects: Aquality.Selenium/Aquality.Selenium.sln
 #    arguments: -c $(buildConfiguration) /p:Version=$(GitVersion.NuGetVersion)
 
-- script: dotnet build Aquality.Selenium/Aquality.Selenium.sln -c $(buildConfiguration) -p:Version=$(GitVersion.NuGetVersion)
+- script: dotnet build Aquality.Selenium/Aquality.Selenium.sln -c $(buildConfiguration)
   displayName: 'Build solution - $(buildConfiguration)'
 
 #- task: SonarCloudAnalyze@1
@@ -51,7 +51,7 @@ steps:
 #    arguments: -c $(buildConfiguration) --no-build
 #    publishTestResults: true
 
-- script: dotnet pack Aquality.Selenium\src\Aquality.Selenium\Aquality.Selenium.csproj -c $(buildConfiguration) --no-build -o $(Build.ArtifactStagingDirectory)
+- script: dotnet pack Aquality.Selenium\src\Aquality.Selenium\Aquality.Selenium.csproj -c $(buildConfiguration) --no-build -p:Version=$(GitVersion.MajorMinorPatch) -o $(Build.ArtifactStagingDirectory)
   displayName: 'Create NuGet package'
 
 #- task: DotNetCoreCLI@2
