#18 Use nuget task to pack (#137)
* #18 Use nuget task to pack

* #18 Use script instead of dotnetcli task to create package

* #18 Disable sonar

* #18 Change path to project for pack

* #18 Fix path to project for pack

* #18 Update path to project for pack

* #18 Update path to pack project

* #18 Remove output from pack script

* #18 Add output to pack script

* #18 Change build task to script

* #18 Fix build script

* #18 Change package version

* #18 Update build command

* #18 Fix pack command

* #18 Enable tasks

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,12 +25,8 @@ steps:
     extraProperties: |
       sonar.coverage.exclusions=**/**
 
-- task: DotNetCoreCLI@2
+- script: dotnet build Aquality.Selenium/Aquality.Selenium.sln -c $(buildConfiguration)
   displayName: 'Build solution - $(buildConfiguration)'
-  inputs:
-    command: 'build'
-    projects: Aquality.Selenium/Aquality.Selenium.sln
-    arguments: -c $(buildConfiguration) /p:Version=$(GitVersion.NuGetVersion)
 
 - task: SonarCloudAnalyze@1
   displayName: 'Run SonarCloud code analysis'
@@ -48,12 +44,8 @@ steps:
     arguments: -c $(buildConfiguration) --no-build
     publishTestResults: true
 
-- task: DotNetCoreCLI@2
+- script: dotnet pack Aquality.Selenium\src\Aquality.Selenium\Aquality.Selenium.csproj -c $(buildConfiguration) --no-build -p:Version=$(GitVersion.NuGetVersion) -o $(Build.ArtifactStagingDirectory)
   displayName: 'Create NuGet package'
-  inputs:
-    command: 'pack'
-    projects: Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
-    arguments: -c $(buildConfiguration) -o $(Build.ArtifactStagingDirectory) /p:Version=$(GitVersion.NuGetVersion)
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
 
 - task: NuGetCommand@2
