--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,7 +64,6 @@ steps:
     repositoryName: 'aquality-automation/aquality-selenium-dotnet'
     action: 'create'
     tag: 'v$(GitVersion.NuGetVersion)'
-    title: 'v$(GitVersion.NuGetVersion)'
-    tagSource: 'auto'
+    tagSource: 'manual'
     isPreRelease: contains(variables['GitVersion.NuGetVersion'], '-')
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
