--- a/Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
+++ b/Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
@@ -8,13 +8,19 @@
 
   <ItemGroup>
     <None Remove="Resources\GetCurrentUrl.js" />
+    <None Remove="Resources\GetElementYCoordinate.js" />
+    <None Remove="Resources\GetScrollCoordinates.js" />
+    <None Remove="Resources\GetWindowSize.js" />
     <None Remove="Resources\OpenUrlInNewWindow.js" />
     <None Remove="Resources\TestJavaScript.js" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\GetWindowSize.js" />
+    <EmbeddedResource Include="Resources\GetElementYCoordinate.js" />
     <EmbeddedResource Include="Resources\OpenUrlInNewWindow.js" />
     <EmbeddedResource Include="Resources\GetCurrentUrl.js" />
+    <EmbeddedResource Include="Resources\GetScrollCoordinates.js" />
     <EmbeddedResource Include="Resources\TestJavaScript.js" />
   </ItemGroup>
 
