--- a/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
+++ b/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
@@ -19,6 +19,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\JavaScripts\OpenInNewTab.js" />
+    <None Remove="Resources\JavaScripts\OpenNewTab.js" />
     <None Remove="Resources\Localization\en.json" />
     <None Remove="Resources\Localization\ru.json" />
     <None Remove="Resources\settings.json" />
@@ -43,6 +45,7 @@
     <EmbeddedResource Include="Resources\JavaScripts\GetViewPortCoordinates.js" />
     <EmbeddedResource Include="Resources\JavaScripts\IsPageLoaded.js" />
     <EmbeddedResource Include="Resources\JavaScripts\MouseHover.js" />
+    <EmbeddedResource Include="Resources\JavaScripts\OpenInNewTab.js" />
     <EmbeddedResource Include="Resources\JavaScripts\ScrollBy.js" />
     <EmbeddedResource Include="Resources\JavaScripts\ScrollToBottom.js" />
     <EmbeddedResource Include="Resources\JavaScripts\ScrollToElement.js" />
@@ -52,6 +55,7 @@
     <EmbeddedResource Include="Resources\JavaScripts\SelectComboBoxValueByText.js" />
     <EmbeddedResource Include="Resources\JavaScripts\SetFocus.js" />
     <EmbeddedResource Include="Resources\JavaScripts\SetInnerHTML.js" />
+    <EmbeddedResource Include="Resources\JavaScripts\OpenNewTab.js" />
     <EmbeddedResource Include="Resources\JavaScripts\SetValue.js" />
     <EmbeddedResource Include="Resources\Localization\en.json" />
     <EmbeddedResource Include="Resources\Localization\ru.json" />
