Enable docs generation (#171)
* Enbaled docs generation

* Add docs file

* Fix docs config

* Fix docs config

* Remove docs file

* Add generated docs

* Fix chromedriver version for azure

* Update NLog

* Update chromedriver version for azure

* Update target .net core version to 3.0, update nuget deps

Co-authored-by: Pavel Anihimovsky <p.anihimovsky@a1qa.com>

--- a/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
+++ b/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
@@ -18,6 +18,10 @@
     <IsPackable>true</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>Aquality.Selenium.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="Resources\Localization\en.json" />
     <None Remove="Resources\Localization\ru.json" />
@@ -60,7 +64,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aquality.Selenium.Core" Version="0.3.9" />
-    <PackageReference Include="NLog" Version="4.6.6" />
+    <PackageReference Include="NLog" Version="4.7.0" />
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="WebDriverManager" Version="2.9.1" />
