Update Azure pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,17 +45,8 @@ steps:
     publishTestResults: true
 
 - script: dotnet pack Aquality.Selenium\src\Aquality.Selenium\Aquality.Selenium.csproj -c $(buildConfiguration) --no-build -p:Version=$(GitVersion.NuGetVersion) -o $(Build.ArtifactStagingDirectory)
-  displayName: 'Create NuGet package'
+  displayName: 'Pack to NuGet package'
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
-
-#- task: NuGetCommand@2
-#  displayName: 'Push NuGet package'
-#  inputs:
-#    command: 'push'
-#    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/Aquality.Selenium*.nupkg;!$(Build.ArtifactStagingDirectory)/**/Aquality.Selenium*.symbols.nupkg'
-#    nuGetFeedType: 'external'
-#    publishFeedCredentials: 'NuGet'
-#  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
 
 - task: GitHubRelease@0
   displayName: 'Create tag on GitHub'
