Add PageLoadStrategy to IDriverSettings

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
@@ -18,7 +18,8 @@
         "download.prompt_for_download": "false",
         "download.default_directory": "//home//selenium//downloads"
       },
-      "startArguments": []
+      "startArguments": [],
+      "pageLoadStrategy": "Normal"
     },
     "firefox": {
       "webDriverVersion": "Latest",
