--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,6 +78,7 @@ stages:
         repositoryName: 'aquality-automation/aquality-selenium-dotnet'
         action: 'create'
         tag: 'v$(GitVersion.NuGetVersion)'
+        title: 'v$(GitVersion.NuGetVersion)'
         tagSource: 'manual'
         isPreRelease: contains(variables['GitVersion.NuGetVersion'], '-')
 
