--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,61 +6,86 @@ pool:
   
 variables:
   buildConfiguration: 'Release'
-  profile: 'azure'
 
-steps:
-- task: GitVersion@5
-  displayName: 'Run GitVersion'
-  inputs:
-    runtime: 'core'
+stages:
+- stage: test
 
-- task: SonarCloudPrepare@1
-  displayName: 'Prepare SonarCloud analysis'
-  inputs:
-    SonarCloud: 'SonarCloud'
-    organization: 'aqualityautomation'
-    projectKey: 'aquality-automation_aquality-selenium-dotnet'
-    projectName: 'aquality-selenium-dotnet'
-    projectVersion: '$(Build.BuildNumber)'
-    extraProperties: |
-      sonar.coverage.exclusions=**/**
+  jobs:
+  - job: sonar
+    displayName: Analyse code with SonarQube
 
-- script: dotnet build Aquality.Selenium/Aquality.Selenium.sln -c $(buildConfiguration)
-  displayName: 'Build solution - $(buildConfiguration)'
+    steps:
+    - task: SonarCloudPrepare@1
+      displayName: 'Prepare SonarCloud analysis'
+      inputs:
+        SonarCloud: 'SonarCloud'
+        organization: 'aqualityautomation'
+        projectKey: 'aquality-automation_aquality-selenium-dotnet'
+        projectName: 'aquality-selenium-dotnet'
+        projectVersion: '$(Build.BuildNumber)'
+        extraProperties: |
+          sonar.coverage.exclusions=**/**
 
-- task: SonarCloudAnalyze@1
-  displayName: 'Run SonarCloud code analysis'
-  continueOnError: true
+    - task: DotNetCoreCLI@2
+      displayName: 'Build solution'
+      inputs:
+        command: 'build'
+        projects: Aquality.Selenium/Aquality.Selenium.sln
+        arguments: -c $(buildConfiguration)      
 
-- task: SonarCloudPublish@1
-  displayName: 'Publish SonarCloud quality gate results'
-  continueOnError: true
+    - task: SonarCloudAnalyze@1
+      displayName: 'Run SonarCloud code analysis'
+      continueOnError: true
 
-- task: DotNetCoreCLI@2
-  displayName: 'Run tests'
-  inputs:
-    command: 'test'
-    projects: '**/*Tests*/*.csproj'
-    arguments: -c $(buildConfiguration) --no-build
-    publishTestResults: true
+    - task: SonarCloudPublish@1
+      displayName: 'Publish SonarCloud quality gate results'
 
-- script: dotnet pack Aquality.Selenium\src\Aquality.Selenium\Aquality.Selenium.csproj -c $(buildConfiguration) --no-build -p:Version=$(GitVersion.NuGetVersion) -o $(Build.ArtifactStagingDirectory)
-  displayName: 'Pack to NuGet package'
+  - job: tests
+    displayName: Run tests
+
+    variables:
+      profile: 'azure'
+
+    steps:
+    - task: DotNetCoreCLI@2
+      displayName: 'Run tests'
+      inputs:
+        command: 'test'
+        projects: '**/*Tests*/*.csproj'
+        arguments: -c $(buildConfiguration)
+        publishTestResults: true
+
+- stage: deploy
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
 
-- task: GitHubRelease@0
-  displayName: 'Create tag on GitHub'
-  inputs:
-    gitHubConnection: 'GitHub'
-    repositoryName: 'aquality-automation/aquality-selenium-dotnet'
-    action: 'create'
-    tag: 'v$(GitVersion.NuGetVersion)'
-    tagSource: 'manual'
-    isPreRelease: contains(variables['GitVersion.NuGetVersion'], '-')
-  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+  jobs:
+  - job: release
+    displayName: 'Create tag on GitHub and publish NuGet package'
 
-- task: PublishBuildArtifacts@1
-  inputs:
-    targetPath: '$(Build.ArtifactStagingDirectory)'
-    artifactName: '_aquality-automation.aquality-selenium-dotnet'
-  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    steps:
+    - task: GitVersion@5
+      displayName: 'Run GitVersion'
+      inputs:
+        runtime: 'core'
+
+    - script: dotnet pack Aquality.Selenium\src\Aquality.Selenium\Aquality.Selenium.csproj -c $(buildConfiguration) -p:Version=$(GitVersion.NuGetVersion) -o $(Build.ArtifactStagingDirectory)
+      displayName: 'Pack to NuGet package'
+
+    - task: GitHubRelease@0
+      displayName: 'Create tag on GitHub'
+      inputs:
+        gitHubConnection: 'GitHub'
+        repositoryName: 'aquality-automation/aquality-selenium-dotnet'
+        action: 'create'
+        tag: 'v$(GitVersion.NuGetVersion)'
+        title: 'v$(GitVersion.NuGetVersion)'
+        tagSource: 'manual'
+        isPreRelease: contains(variables['GitVersion.NuGetVersion'], '-')
+
+    - task: NuGetCommand@2
+      displayName: 'Push NuGet package'
+      inputs:
+        command: 'push'
+        packagesToPush: '$(Build.ArtifactStagingDirectory)/**/Aquality.Selenium*.nupkg;!$(Build.ArtifactStagingDirectory)/**/Aquality.Selenium*.symbols.nupkg'
+        nuGetFeedType: 'external'
+        publishFeedCredentials: 'NuGet'
