Add method to Browser to get logs

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
@@ -8,7 +8,12 @@
     "chrome": {
       "webDriverVersion": "Latest",
       "capabilities": {
-        "enableVNC": true
+        "enableVNC": true,
+        "loggingPrefs": {
+          "driver": "INFO",
+          "server": "OFF",
+          "browser": "FINE"
+        }
       },
       "options": {
         "intl.accept_languages": "en",
