--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
@@ -101,7 +101,8 @@
     "pollingInterval": 300
   },
   "logger": {
-    "language": "en"
+    "language": "en",
+    "logPageSource": true
   },
   "elementCache": {
     "isEnabled": false
