--- a/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
+++ b/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
@@ -20,9 +20,11 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>Aquality.Selenium.xml</DocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Localization\be.json" />
     <None Remove="Resources\Localization\en.json" />
     <None Remove="Resources\Localization\ru.json" />
     <None Remove="Resources\settings.json" />
@@ -59,6 +61,7 @@
     <EmbeddedResource Include="Resources\JavaScripts\SetInnerHTML.js" />
     <EmbeddedResource Include="Resources\JavaScripts\OpenNewTab.js" />
     <EmbeddedResource Include="Resources\JavaScripts\SetValue.js" />
+    <EmbeddedResource Include="Resources\Localization\be.json" />
     <EmbeddedResource Include="Resources\Localization\en.json" />
     <EmbeddedResource Include="Resources\Localization\ru.json" />
     <EmbeddedResource Include="Resources\settings.json" />
@@ -66,7 +69,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Edge.SeleniumTools" Version="3.141.1" />
-    <PackageReference Include="Aquality.Selenium.Core" Version="1.1.1" />
+    <PackageReference Include="Aquality.Selenium.Core" Version="1.2.2" />
     <PackageReference Include="WebDriverManager" Version="2.9.1" />
   </ItemGroup>
 
