Update WebDriverManager reference to enable "MatchingBrowser" webDriverVersion strategy

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
@@ -6,7 +6,7 @@
 
   "driverSettings": {
     "chrome": {
-      "webDriverVersion": "Latest",
+      "webDriverVersion": "MatchingBrowser",
       "capabilities": {
         "enableVNC": true,
         "loggingPrefs": {
