Update azure-pipelines.yml for Azure Pipelines
updated github connector

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -76,7 +76,7 @@ stages:
     - task: GitHubRelease@0
       displayName: 'Create tag on GitHub'
       inputs:
-        gitHubConnection: 'GitHub'
+        gitHubConnection: 'github.com_aqualityautomation'
         repositoryName: 'aquality-automation/aquality-selenium-dotnet'
         action: 'create'
         tag: 'v$(GitVersion.NuGetVersion)'
