--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
@@ -17,7 +17,7 @@
         "profile.default_content_settings.popups": "0",
         "disable-popup-blocking": "true",
         "download.prompt_for_download": "false",
-        "download.default_directory": "//home//selenium//downloads"
+        "download.default_directory": "./downloads"
       },
       "startArguments": [],
       "pageLoadStrategy": "Normal"
@@ -30,7 +30,7 @@
       },
       "options": {
         "intl.accept_languages": "en",
-        "browser.download.dir": "//home//selenium//downloads",
+        "browser.download.dir": "./downloads",
         "browser.download.folderList": 2,
         "browser.helperApps.neverAsk.saveToDisk": "application/octet-stream, application/x-debian-package, application/x-www-form-urlencod, application/json, application/x-compressed, application/x-zip-compressed, application/zip, multipart/x-zip, text/plain, text/csv",
         "browser.helperApps.alwaysAsk.force": false,
@@ -117,30 +117,31 @@
         "download.default_directory": "./downloads"
       },
       "startArguments": []
-    },
-    "timeouts": {
-      "timeoutImplicit": 0,
-      "timeoutCondition": 30,
-      "timeoutScript": 10,
-      "timeoutPageLoad": 15,
-      "timeoutPollingInterval": 300,
-      "timeoutCommand": 60
-    },
-    "retry": {
-      "number": 2,
-      "pollingInterval": 300
-    },
-    "logger": {
-      "language": "en",
-      "logPageSource": true
-    },
-    "elementCache": {
-      "isEnabled": false
-    },
-    "visualization": {
-      "defaultThreshold": 0.012,
-      "comparisonWidth": 16,
-      "comparisonHeight": 16,
-      "pathToDumps": "../../../Resources/VisualDumps/"
     }
+  },
+  "timeouts": {
+    "timeoutImplicit": 0,
+    "timeoutCondition": 30,
+    "timeoutScript": 10,
+    "timeoutPageLoad": 15,
+    "timeoutPollingInterval": 300,
+    "timeoutCommand": 60
+  },
+  "retry": {
+    "number": 2,
+    "pollingInterval": 300
+  },
+  "logger": {
+    "language": "en",
+    "logPageSource": true
+  },
+  "elementCache": {
+    "isEnabled": false
+  },
+  "visualization": {
+    "defaultThreshold": 0.012,
+    "comparisonWidth": 16,
+    "comparisonHeight": 16,
+    "pathToDumps": "../../../Resources/VisualDumps/"
   }
+}
