--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
@@ -57,16 +57,7 @@
       "startArguments": []
     },
     "edge": {
-      "systemArchitecture": "X32",
-      "capabilities": {
-        "unhandledPromptBehavior": "default"
-      },
-      "options": {
-      },
-      "startArguments": []
-    },
-    "edgechromium": {
-      "webDriverVersion": "82.0.458.0",
+      "webDriverVersion": "Latest",
       "capabilities": {
         "enableVNC": true
       },
