Fix missed method documentation warning

--- a/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
+++ b/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
@@ -20,7 +20,7 @@
 
   <PropertyGroup>
     <DocumentationFile>Aquality.Selenium.xml</DocumentationFile>
-    <NoWarn>1701;1702</NoWarn>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
