Implemented ShadowRoot functionality wrapper +semver: feature

--- a/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
+++ b/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
@@ -24,6 +24,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\JavaScripts\ExpandShadowRoot.js" />
     <None Remove="Resources\Localization\be.json" />
     <None Remove="Resources\Localization\en.json" />
     <None Remove="Resources\Localization\ru.json" />
@@ -43,6 +44,7 @@
     <EmbeddedResource Include="Resources\JavaScripts\GetComboBoxSelectedText.js" />
     <EmbeddedResource Include="Resources\JavaScripts\GetComboBoxTexts.js" />
     <EmbeddedResource Include="Resources\JavaScripts\GetElementByXPath.js" />
+    <EmbeddedResource Include="Resources\JavaScripts\ExpandShadowRoot.js" />
     <EmbeddedResource Include="Resources\JavaScripts\GetElementText.js" />
     <EmbeddedResource Include="Resources\JavaScripts\GetElementXPath.js" />
     <EmbeddedResource Include="Resources\JavaScripts\GetTextFirstChild.js" />
