Add possible to hide "Chrome is being controlled by automated software" infobar within Chrome

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
@@ -19,6 +19,7 @@
         "download.prompt_for_download": "false",
         "download.default_directory": "./downloads"
       },
+      "excludedArguments": [ "enable-automation" ],
       "startArguments": [],
       "pageLoadStrategy": "Normal"
     },
