--- a/Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
+++ b/Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
@@ -9,13 +9,17 @@
   <ItemGroup>
     <None Remove="Resources\GetCurrentUrl.js" />
     <None Remove="Resources\GetElementYCoordinate.js" />
+    <None Remove="Resources\GetMediaType.js" />
     <None Remove="Resources\GetScrollCoordinates.js" />
     <None Remove="Resources\GetWindowSize.js" />
+    <None Remove="Resources\IsTouchEnabled.js" />
     <None Remove="Resources\OpenUrlInNewWindow.js" />
     <None Remove="Resources\TestJavaScript.js" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\GetMediaType.js" />
+    <EmbeddedResource Include="Resources\IsTouchEnabled.js" />
     <EmbeddedResource Include="Resources\GetWindowSize.js" />
     <EmbeddedResource Include="Resources\GetElementYCoordinate.js" />
     <EmbeddedResource Include="Resources\OpenUrlInNewWindow.js" />
