[Feature/Enabling_Gecko_Driver_Host_Default_In_Settings] Add additional property to set geckoService.Host ::1

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
@@ -25,6 +25,7 @@
     },
     "firefox": {
       "webDriverVersion": "Latest",
+      "isGeckoServiceHostDefaultEnabled": false,
       "capabilities": {
         "enableVNC": true,
         "unhandledPromptBehavior": "default"
