Support logging preferences from settings.json +semver: feature closes #223

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
@@ -19,6 +19,9 @@
         "download.prompt_for_download": "false",
         "download.default_directory": "./downloads"
       },
+      "loggingPreferences": {
+          "Performance": "All"
+      },
       "excludedArguments": [ "enable-automation" ],
       "startArguments": [],
       "pageLoadStrategy": "Normal"
