--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,6 +63,7 @@ stages:
         
     - task: DotNetCoreCLI@2
       displayName: 'Run tests'
+      retryCountOnTaskFailure: 1
       inputs:
         command: 'test'
         projects: '**/*Tests*/*.csproj'
