--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
 - master
 
 pool:
-  vmImage: 'windows-latest'
+  vmImage: 'windows-2019'
   
 variables:
   buildConfiguration: 'Release'
@@ -63,6 +63,7 @@ stages:
         
     - task: DotNetCoreCLI@2
       displayName: 'Run tests'
+      retryCountOnTaskFailure: 1
       inputs:
         command: 'test'
         projects: '**/*Tests*/*.csproj'
